--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mmdetection"]
 	path = mmdetection
-	url = git@github.com:open-mmlab/mmdetection.git
+	url = https://github.com/open-mmlab/mmdetection.git
